--- a/src/main/resources/templates/parser.html
+++ b/src/main/resources/templates/parser.html
@@ -14,8 +14,12 @@
 </th:block>
 
 <!-- Content -->
+<head>
+    <meta charset="UTF-8">
+    <title>parser page</title>
+</head>
 <div layout:fragment="content">
-    <h1>Content</h1>
+    <h3>Content</h3>
 
     <table>
         <tr>
@@ -35,7 +39,6 @@
             <td th:text="${index}">index</td>
         </tr>
     </table>
-    출처: https://minaminaworld.tistory.com/162 [미나미 블로그:티스토리]
 </div>
 
 </html>
