TEST-1 test-creator 테스트

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,6 +1,9 @@
 <html lagn="ko" xmlns:th="http://www.thymeleaf.org">
 <!--footerFragment 선언-->
 <div th:fragment="footerFragment">
-    <h3>Footer Section</h3>
+    <footer>
+        <p>Copyright © 2022 Coocon.co.,Ltd. All rights reserved.</p>
+        <address>Contact 02-3779-XXXX</address>
+    </footer>
 </div>
 </html>
