--- a/src/main/resources/templates/parser.html
+++ b/src/main/resources/templates/parser.html
@@ -7,6 +7,7 @@
 <!-- index.html 고유 CSS 추가 -->
 <th:block layout:fragment="css">
     <!--    <link rel="stylesheet" th:href="@{/css/page/home.css}" >-->
+    <link rel="stylesheet" th:href="@{/css/table.css}">
 </th:block>
 <!-- index.html 고유 스크립트 추가 -->
 <th:block layout:fragment="script">
@@ -16,7 +17,7 @@
 <!-- Content -->
 <head>
     <meta charset="UTF-8">
-    <title>parser page</title>
+    <title>APITEAM-parser</title>
 </head>
 <div layout:fragment="content">
     <h3>Content</h3>
@@ -30,7 +31,8 @@
             <th>종료</th>
             <th>index 내용</th>
         </tr>
-        <tr th:each="event , index: ${events}">
+
+        <tr th:if="${data} != null" th:each="list ">
             <td th:text="${index.index}">#</td>
             <td th:text="${event.name}">이벤트 이름</td>
             <td th:text="${event.limitOfEnrollment}">100</td>
