--- a/src/main/resources/static/css/table.css
+++ b/src/main/resources/static/css/table.css
@@ -7,8 +7,17 @@ th, td {
     border: 1px solid #444444;
     padding: 10px;
 }
-
+thead {
+    background-color: #a0d5f6;
+}
 footer {
     position: absolute;
     bottom: 0;
+}
+
+.content_table_basic tbody tr:nth-child(2n) {
+    background-color: #e3f7f8;
+}
+.content_table_basic tbody tr:nth-child(2n+1) {
+    background-color: #f1eddf;
 }
