--- a/src/main/resources/templates/samplePage.html
+++ b/src/main/resources/templates/samplePage.html
@@ -16,11 +16,10 @@
 <!-- Content -->
 <head>
     <meta charset="UTF-8">
-    <title>APITEAM-main</title>
+    <title>APITEAM-parser</title>
 </head>
-<div layout:fragment="content" id='wrapper'>
-
-
+<div layout:fragment="content">
+    <h3>Content</h3>
 </div>
 
 </html>
