--- a/src/main/resources/templates/layout/default_layout.html
+++ b/src/main/resources/templates/layout/default_layout.html
@@ -7,6 +7,9 @@
   <title>thymeleaf layout</title>
   <meta name="viewport" content="width=device-width, maximum-scale=1.0, minimum-scale=1, user-scalable=yes,initial-scale=1.0" />
   <!-- content script -->
+  <link rel="stylesheet" th:href="@{/css/table.css}">
+  <link rel="stylesheet" th:href="@{/css/button.css}">
+  <link rel="stylesheet" th:href="@{/css/footer.css}">
   <th:block layout:fragment="css"> </th:block>
   <!-- content script -->
   <th:block layout:fragment="script"></th:block>
