--- a/src/main/resources/templates/parser.html
+++ b/src/main/resources/templates/parser.html
@@ -7,11 +7,11 @@
 <!-- index.html 고유 CSS 추가 -->
 <th:block layout:fragment="css">
     <!--    <link rel="stylesheet" th:href="@{/css/page/home.css}" >-->
-    <link rel="stylesheet" th:href="@{/css/table.css}">
 </th:block>
 <!-- index.html 고유 스크립트 추가 -->
 <th:block layout:fragment="script">
     <!--    <script th:src="@{/js/page/home.js}"></script>-->
+    <script th:src="@{/js/parser.js}"></script>
 </th:block>
 
 <!-- Content -->
@@ -19,27 +19,83 @@
     <meta charset="UTF-8">
     <title>APITEAM-parser</title>
 </head>
-<div layout:fragment="content">
+<div layout:fragment="content" id='wrapper'>
     <h3>Content</h3>
 
     <table>
-        <tr>
-            <th>#</th>
-            <th>이름</th>
-            <th>참가 인원</th>
-            <th>시작</th>
-            <th>종료</th>
-            <th>index 내용</th>
-        </tr>
+        <colgroup>
+            <col style="width: 20%;">
+            <col style="width: 80%;">
+        </colgroup>
+        <tbody>
+           <tr>
+               <td>
+                   <select id="typeSelect">
+                       <option value='' selected>서비스선택</option>
+                       <option value='SVC' selected>SVC</option>
+                       <option value='IMO' selected>IMO</option>
+                       <option value='WSVC' selected>WSVC</option>
+                       <option value='IDO' selected>IDO</option>
+                       <option value='BCS' selected>BCS</option>
+                   </select>
+               </td>
+               <td>
+                   <select id="svcList" class="lists" style="display:block;">
+                       <option th:each="detail, index : ${SVC_LIST}"></option>
+                   </select>
+                   <select id="imoList" class="lists" style="display:none;">
+                       <option th:each="detail, index : ${IMO_LIST}"></option>
+                   </select>
+                   <select id="wsvcList" class="lists" style="display:none;">
+                       <option th:each="detail, index : ${WSVC_LIST}"></option>
+                   </select>
+                   <select id="idoList" class="lists" style="display:none;">
+                       <option th:each="detail, index : ${IDO_LIST}"></option>
+                   </select>
+               </td>
+           </tr>
 
-        <tr th:if="${data} != null" th:each="list ">
-            <td th:text="${index.index}">#</td>
-            <td th:text="${event.name}">이벤트 이름</td>
-            <td th:text="${event.limitOfEnrollment}">100</td>
-            <td th:text="${event.startDateTime}">2019년 1월 10일 오전 10시</td>
-            <td th:text="${event.endDateTime}">2019년 1월 10일 오전 12시</td>
-            <td th:text="${index}">index</td>
-        </tr>
+           <tr>
+               <td>현재 파일</td>
+               <td id="currentFile"></td>
+           </tr>
+           <tr>
+               <td>TCP 데이터</td>
+               <td><textarea id="tcpData" name="tcpData" style="width:100%;" rows="20"></textarea></td>
+           </tr>
+           <tr>
+               <td>TCP 데이터</td>
+               <td><textarea id="jsonData" name="jsonData" style="width:100%;" rows="20"></textarea></td>
+           </tr>
+        </tbody>
+
+    </table>
+
+
+    <table class = 'content_table_basic'>
+        <thead>
+            <tr>
+                <th>필드명</th>
+                <th>ID</th>
+                <th>타입</th>
+                <th>정렬(패딩)</th>
+                <th>길이</th>
+                <th>내용</th>
+            </tr>
+        </thead>
+
+        <tbody>
+            <tr th:if="${data} != null" th:each="detail, index : ${data}">
+                <td th:text="${detail.index}">#</td>
+                <td th:text="${detail.name}">이벤트 이름</td>
+                <td th:text="${detail.limitOfEnrollment}">100</td>
+                <td th:text="${detail.startDateTime}">2019년 1월 10일 오전 10시</td>
+                <td th:text="${detail.endDateTime}">2019년 1월 10일 오전 12시</td>
+                <td th:text="${detail}">index</td>
+            </tr>
+        </tbody>
+
+
     </table>
 </div>
 
