--- a/src/main/resources/static/css/table.css
+++ b/src/main/resources/static/css/table.css
@@ -8,7 +8,7 @@ th, td {
     padding: 10px;
 }
 thead {
-    background-color: #a0d5f6;
+    background-color: #27a9e3;
 }
 footer {
     position: absolute;
