--- a/src/main/resources/templates/parser.html
+++ b/src/main/resources/templates/parser.html
@@ -31,28 +31,39 @@
            <tr>
                <td>
                    <select id="typeSelect">
-                       <option value='' selected>서비스선택</option>
-                       <option value='SVC' selected>SVC</option>
-                       <option value='IMO' selected>IMO</option>
-                       <option value='WSVC' selected>WSVC</option>
-                       <option value='IDO' selected>IDO</option>
-                       <option value='BCS' selected>BCS</option>
+                       <option value='svc' >SVC</option>
+                       <option value='imo' >IMO</option>
+                       <option value='wsvc' >WSVC</option>
+                       <option value='ido' >IDO</option>
+                       <option value='bcs' >BCS</option>
+                       <option value='cmo' >CMO</option>
                    </select>
+
                </td>
                <td>
-                   <select id="svcList" class="lists" style="display:block;">
-                       <option th:each="detail, index : ${SVC_LIST}"></option>
+                   <select id="svcList" class="lists" useYn="true" style="display:inline;width:80%;">
+                       <option th:each="detail, index : ${SVC_LIST}"
+                               th:value="${detail}"  th:text="${detail}"></option>
                    </select>
-                   <select id="imoList" class="lists" style="display:none;">
-                       <option th:each="detail, index : ${IMO_LIST}"></option>
+                   <select id="imoList" class="lists" style="display:none;width:80%;">
+                       <option th:each="detail, index : ${IMO_LIST}"
+                               th:value="${detail}"  th:text="${detail}"></option>
                    </select>
-                   <select id="wsvcList" class="lists" style="display:none;">
-                       <option th:each="detail, index : ${WSVC_LIST}"></option>
+                   <select id="wsvcList" class="lists" style="display:none;width:80%;">
+                       <option th:each="detail, index : ${WSVC_LIST}"
+                               th:value="${detail}"  th:text="${detail}"></option>
                    </select>
-                   <select id="idoList" class="lists" style="display:none;">
-                       <option th:each="detail, index : ${IDO_LIST}"></option>
+                   <select id="idoList" class="lists" style="display:none;width:80%;">
+                       <option th:each="detail, index : ${IDO_LIST}"
+                               th:value="${detail}"  th:text="${detail}"></option>
                    </select>
+                   <select id="bcsList" class="lists" style="display:none;width:80%;">
+                       <option th:each="detail, index : ${BCS_LIST}"
+                               th:value="${detail}"  th:text="${detail}"></option>
+                   </select>
+                   <button id="selectFile">선택</button>&nbsp;
                </td>
+
            </tr>
 
            <tr>
@@ -61,42 +72,26 @@
            </tr>
            <tr>
                <td>기능</td>
-               <td></td>
+               <td>데이터 생성 :
+                   <button id="createTcpData">TCP데이터생성</button>&nbsp;
+                   <button id="createJsonData">JSON데이터생성</button>&nbsp;
+                   <button id="createTableByTcp">테이블생성(TCP데이터기반)</button>&nbsp;
+                   <button id="createTableByJson">테이블생성(JSON데이터기반)</button>&nbsp;
+               </td>
            </tr>
            <tr>
                <td>TCP 데이터</td>
-               <td><textarea id="tcpData" name="tcpData" style="width:100%;" rows="20"></textarea></td>
+               <td><textarea id="tcpData" name="tcpData" style="width:100%;" rows="10"></textarea></td>
            </tr>
            <tr>
-               <td>TCP 데이터</td>
-               <td><textarea id="jsonData" name="jsonData" style="width:100%;" rows="20"></textarea></td>
+               <td>JSON 데이터</td>
+               <td><textarea id="jsonData" name="jsonData" style="width:100%;" rows="10"></textarea></td>
            </tr>
         </tbody>
 
     </table>
 
-    <table class = 'content_table_basic'>
-        <thead>
-            <tr>
-                <th>필드명</th>
-                <th>ID</th>
-                <th>타입</th>
-                <th>정렬(패딩)</th>
-                <th>길이</th>
-                <th>내용</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr th:if="${data} != null" th:each="detail, index : ${data}">
-                <td th:text="${detail.index}">#</td>
-                <td th:text="${detail.name}">이벤트 이름</td>
-                <td th:text="${detail.limitOfEnrollment}">100</td>
-                <td th:text="${detail.startDateTime}">2019년 1월 10일 오전 10시</td>
-                <td th:text="${detail.endDateTime}">2019년 1월 10일 오전 12시</td>
-                <td th:text="${detail}">index</td>
-            </tr>
-        </tbody>
-    </table>
+
 </div>
 
 </html>
